--- a/D03CBX_JSClient/wwwroot/index.html
+++ b/D03CBX_JSClient/wwwroot/index.html
@@ -42,10 +42,42 @@
         <input type="number" id="recordAlbumIDInput" />
 
         <button type="button" onclick="create()">Add Record</button>
-
-
-
     </div>
+
+    <div id="updateformdiv">
+        <h1>Record editor</h1>
+        <label>Record Title</label>
+        <input type="text" id="recordTitleUpdate" />
+
+        <label>Plays</label>
+        <input type="number" id="recordPlaysUpdate" />
+
+        <label>Rating</label>
+        <input type="number" id="recordRatingUpdate" />
+
+        <label>Duration</label>
+        <input type="number" id="recordDurationUpdate" />
+
+        <label>Genre</label>
+        <select id="recordGenreUpdate" name="recordGenreUpdate">
+            <option value="0">Classic</option>
+            <option value="1">Jazz</option>
+            <option value="2">Country</option>
+            <option value="3">Pop</option>
+            <option value="4">Rock</option>
+            <option value="5">Metal</option>
+            <option value="6">Electro</option>
+            <option value="7">Punk</option>
+            <option value="8">Folk</option>
+            <option value="9">Disco</option>
+            <option value="10">Funk</option>
+            <option value="11">Synth</option>
+            <option value="12">HipHop</option>
+        </select>
+        <button type="button" onclick="update()">Edit Record</button>
+    </div>
+
+
 
     <table>
         <thead>
@@ -58,8 +90,8 @@
         <tbody id="resultarea">
         </tbody>
     </table>
- 
-    <script src ="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
