--- a/D03CBX_JSClient/wwwroot/index.html
+++ b/D03CBX_JSClient/wwwroot/index.html
@@ -77,8 +77,6 @@
         <button type="button" onclick="update()">Edit Record</button>
     </div>
 
-
-
     <table>
         <thead>
             <tr>
@@ -90,6 +88,116 @@
         <tbody id="resultarea">
         </tbody>
     </table>
+
+
+
+    <h1> Albums </h1>
+    <div id="formdivAlbum">
+        <label>Album name</label>
+        <input type="text" id="albumNameInput" />
+
+        <label>Year of release</label>
+        <input type="number" id="albumReleaseInput" />
+
+        <label>Genre</label>
+        <select id="albumGenre" name="albumGenre">
+            <option value="0">Classic</option>
+            <option value="1">Jazz</option>
+            <option value="2">Country</option>
+            <option value="3">Pop</option>
+            <option value="4">Rock</option>
+            <option value="5">Metal</option>
+            <option value="6">Electro</option>
+            <option value="7">Punk</option>
+            <option value="8">Folk</option>
+            <option value="9">Disco</option>
+            <option value="10">Funk</option>
+            <option value="11">Synth</option>
+            <option value="12">HipHop</option>
+        </select>
+
+        <button type="button" onclick="createAlbum()">Add Album</button>
+    </div>
+
+    <div id="updateformdivAlbum">
+        <h1>Album editor</h1>
+        <label>Album name</label>
+        <input type="text" id="albumNameUpdate" />
+
+        <label>Year of release</label>
+        <input type="number" id="albumReleaseUpdate" />
+
+        <label>Genre</label>
+        <select id="albumGenreUpdate" name="albumGenreUpdate">
+            <option value="0">Classic</option>
+            <option value="1">Jazz</option>
+            <option value="2">Country</option>
+            <option value="3">Pop</option>
+            <option value="4">Rock</option>
+            <option value="5">Metal</option>
+            <option value="6">Electro</option>
+            <option value="7">Punk</option>
+            <option value="8">Folk</option>
+            <option value="9">Disco</option>
+            <option value="10">Funk</option>
+            <option value="11">Synth</option>
+            <option value="12">HipHop</option>
+        </select>
+        <button type="button" onclick="updateAlbum()">Edit Album</button>
+    </div>
+
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody id="resultareaAlbum">
+        </tbody>
+    </table>
+
+
+
+
+
+    <h1> Writers </h1>
+    <div id="formdivWriter">
+        <label>Writer name</label>
+        <input type="text" id="writerNameInput" />
+
+        <label>Year of birth</label>
+        <input type="number" id="writerYearInput" />
+
+        <button type="button" onclick="createWriter()">Add Writer</button>
+    </div>
+
+    <div id="updateformdivWriter">
+        <h1>Writer editor</h1>
+        <label>Writer name</label>
+        <input type="text" id="writerNameUpdate" />
+
+        <label>Year of birth</label>
+        <input type="number" id="writerYearUpdate" />
+
+        <button type="button" onclick="updateWriter()">Edit Writer</button>
+    </div>
+
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody id="resultareaWriter">
+        </tbody>
+    </table>
+
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
     <script src="script.js"></script>
